--- a/ui/package.json
+++ b/ui/package.json
@@ -11,8 +11,9 @@
   "dependencies": {
     "axios": "^0.18.0",
     "core-js": "^2.6.5",
+    "swagger-ui": "^3.22.1",
     "vue": "^2.6.10",
-    "vue-router": "^3.0.3",
+    "vue-router": "^3.0.6",
     "vuetify": "^1.5.5",
     "vuex": "^3.0.1"
   },
