--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,13 @@
     "express": "~4.16.0",
     "fhir": "^4.6.0",
     "jest": "^24.7.1",
+    "mariadb": "^2.0.4",
     "morgan": "~1.9.0",
-    "sequelize": "^5.7.4"
+    "mysql2": "^1.6.5",
+    "pg": "^7.10.0",
+    "pg-hstore": "^2.3.2",
+    "sequelize": "^5.7.4",
+    "sequelize-cli": "^5.4.0",
+    "sqlite": "^3.0.3"
   }
 }
