--- a/ui/package.json
+++ b/ui/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
+    "fhir": "^4.7.0",
     "swagger-ui": "^3.22.1",
     "vue": "^2.6.10",
     "vue-router": "^3.0.6",
