--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "async": "^3.0.1",
     "axios": "^0.19.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
