Added in sample data files and structure definitions.  Also created report module that will pull in the staff report.  It still needs to be finished to pull more from the configuration.

--- a/server/package.json
+++ b/server/package.json
@@ -12,13 +12,14 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.16.0",
-    "fhir": "^4.6.0",
+    "fhir": "^4.7.0",
     "jest": "^24.7.1",
     "mariadb": "^2.0.4",
     "morgan": "~1.9.0",
     "mysql2": "^1.6.5",
     "pg": "^7.10.0",
     "pg-hstore": "^2.3.2",
+    "request-promise-native": "^1.0.7",
     "sequelize": "^5.7.4",
     "sequelize-cli": "^5.4.0",
     "sqlite": "^3.0.3",
