using urijs to manage requests URL

--- a/server/config/config.json.example
+++ b/server/config/config.json.example
@@ -13,6 +13,11 @@
       "server": "localhost",
       "username": "username",
       "password": "password"
+    },
+    "elastic": {
+      "server": "http://localhost:9200",
+      "username": "username",
+      "password": "username"
     }
   },
   "test": {
