--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "sequelize": "^5.17.1",
     "sequelize-cli": "^5.5.0",
     "sqlite": "^3.0.3",
-    "supertest": "^4.0.2"
+    "supertest": "^4.0.2",
+    "urijs": "^1.19.2"
   }
 }
