--- a/ui/package.json
+++ b/ui/package.json
@@ -9,29 +9,32 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "@babel/helper-regex": "^7.5.5",
     "axios": "0.*",
-    "core-js": "3.*",
+    "core-js": "^2.6.5",
+    "eslint-plugin-prettier": "^3.1.1",
     "fhir": "4.*",
     "swagger-ui": "^3.23.4",
     "vue": "2.*",
     "vue-router": "^3.0.7",
-    "vuetify": "2.*",
+    "vuetify": "^2.1.6",
     "vuex": "^3.1.1"
   },
   "devDependencies": {
+    "@babel/polyfill": "^7.0.0",
     "@vue/cli-plugin-babel": "^3.10.0",
     "@vue/cli-plugin-eslint": "^3.10.0",
     "@vue/cli-plugin-unit-jest": "^3.10.0",
     "@vue/cli-service": "^3.10.0",
-    "@vue/eslint-config-prettier": "5.*",
+    "@vue/eslint-config-prettier": "^5.0.0",
     "@vue/test-utils": "1.0.0-beta.29",
     "babel-core": "6.*",
     "babel-eslint": "^10.0.2",
     "babel-jest": "24.*",
     "eslint": "6.*",
     "eslint-plugin-vue": "^5.2.3",
-    "sass": "^1.22.9",
-    "sass-loader": "7.*",
+    "sass": "^1.23.1",
+    "sass-loader": "^7.3.1",
     "stylus": "0.*",
     "stylus-loader": "3.*",
     "vue-cli-plugin-vuetify": "^0.6.1",
