--- a/ui/package.json
+++ b/ui/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@babel/helper-regex": "^7.5.5",
+    "@mdi/font": "^4.5.95",
     "axios": "0.*",
     "core-js": "^2.6.5",
     "eslint-plugin-prettier": "^3.1.1",
