--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
     "async": "^3.1.0",
     "axios": "^0.19.0",
     "cookie-parser": "~1.4.3",
+    "crypto": "^1.0.1",
     "debug": "~2.6.9",
     "express": "~4.16.0",
     "fhir": "^4.7.0",
