--- a/ui/package.json
+++ b/ui/package.json
@@ -17,6 +17,7 @@
     "fhir": "4.*",
     "swagger-ui": "^3.23.4",
     "vue": "2.*",
+    "vue-cookies": "^1.5.13",
     "vue-router": "^3.0.7",
     "vuetify": "^2.1.6",
     "vuex": "^3.1.1"
