--- a/ui/package.json
+++ b/ui/package.json
@@ -13,6 +13,7 @@
     "@mdi/font": "^4.5.95",
     "axios": "0.*",
     "core-js": "^2.6.5",
+    "datejs": "^1.0.0-rc3",
     "eslint-plugin-prettier": "^3.1.1",
     "fhir": "4.*",
     "swagger-ui": "^3.23.4",
