--- a/ui/config/config.json
+++ b/ui/config/config.json
@@ -1,5 +1,6 @@
 {
-  "logo": "@/assets/logos/ihris.png",
   "site": "Demonstration site",
-  "ignoredSubsections": ["meta", "extension", "modifierextension"]
+  "backend": "http://localhost:3000",
+  "kibana": "http://v5-demo.ihris.org/kibana",
+  "samplePractitioner": 8755
 }
