Pull workflows from fhir server

--- a/server/config/config.json.example
+++ b/server/config/config.json.example
@@ -17,6 +17,7 @@
       "password": "password"
     },
     "kibana": "https://www.elastic.co/products/kibana",
+    "mhero": "http://mhero.org/fhir/StructureDefinition",
     "structureDefinition": "http://server.com/fhir"
   },
   "test": {
@@ -35,6 +36,7 @@
       "password": "password"
     },
     "kibana": "https://www.elastic.co/products/kibana",
+    "mhero": "http://mhero.org/fhir/StructureDefinition",
     "structureDefinition": "http://server.com/fhir"
   },
   "production": {
@@ -53,6 +55,7 @@
       "password": "password"
     },
     "kibana": "https://www.elastic.co/products/kibana",
+    "mhero": "http://mhero.org/fhir/StructureDefinition",
     "structureDefinition": "http://server.com/fhir"
   }
 }
