--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "cookie-parser": "~1.4.3",
     "crypto": "^1.0.1",
     "debug": "~2.6.9",
+    "elasticsearch": "^16.6.0",
     "express": "~4.16.0",
     "fhir": "^4.7.0",
     "jest": "^24.9.0",
