Remove unused file and clean up debugging text

--- a/ui/src/config/config.json.example
+++ b/ui/src/config/config.json.example
@@ -4,6 +4,6 @@
   "backend": "http://localhost:3000",
   "kibana": "http://www.mykibana.org",
   "mHero": {
-    "emNutt": "http://emnutt.ihris.org:3000"
+    "emNutt": "http://www.myemnutt.com"
   }
 }
