--- a/server/package.json
+++ b/server/package.json
@@ -10,11 +10,13 @@
     "async": "^3.2.0",
     "axios": "^0.19.2",
     "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "debug": "~2.6.9",
     "elasticsearch": "^16.6.0",
     "express": "~4.16.0",
     "fhir": "^4.7.2",
+    "helmet": "^3.21.3",
     "jest": "^24.9.0",
     "mariadb": "^2.2.0",
     "morgan": "~1.9.0",
