--- a/ui/package.json
+++ b/ui/package.json
@@ -39,6 +39,7 @@
     "babel-core": "6.*",
     "babel-eslint": "^10.0.2",
     "babel-jest": "24.*",
+    "babel-preset-env": "^1.7.0",
     "eslint": "6.*",
     "eslint-plugin-vue": "^5.2.3",
     "sass": "^1.23.1",
