--- a/ui/package.json
+++ b/ui/package.json
@@ -18,6 +18,7 @@
     "fhir": "4.*",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
+    "nprogress": "^0.2.0",
     "swagger-ui": "^3.23.4",
     "vue": "2.*",
     "vue-async-computed": "^3.8.2",
