--- a/ui/package.json
+++ b/ui/package.json
@@ -37,7 +37,7 @@
     "@vue/cli-service": "^4.0.5",
     "@vue/eslint-config-prettier": "^5.0.0",
     "@vue/test-utils": "1.0.0-beta.29",
-    "babel-core": "6.*",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.2",
     "babel-jest": "24.*",
     "babel-preset-env": "^1.7.0",
