add syntax-dynamic-import plugin for importing so lazy loading routes work with jest

--- a/ui/.babelrc
+++ b/ui/.babelrc
@@ -2,6 +2,7 @@
     "presets": [["env", { "modules": false }]],
     "env": {
       "test": {
+        "plugins": ["syntax-dynamic-import"],
         "presets": [
           ["env", { 
             "targets": { "node": "current" }
