--- a/ui/package.json
+++ b/ui/package.json
@@ -40,6 +40,7 @@
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.2",
     "babel-jest": "24.*",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-preset-env": "^1.7.0",
     "eslint": "6.*",
     "eslint-plugin-vue": "^5.2.3",
