--- a/ui/src/config/config.json.example
+++ b/ui/src/config/config.json.example
@@ -3,5 +3,11 @@
   "site": "Demonstration site",
   "backend": "http://localhost:3000",
   "kibana": "http://www.mykibana.org",
-  "mHero": true
+  "samplePractitioner": 8755,
+  "dashboards": ["Sample Dashboard 1", "Sample Dashboard 2"],
+  "demo": true,
+  "mHero": {
+    "installed": true,
+    "dashboards": ["mHero Dashboard"]
+  }
 }
