--- a/config/server_config.json.example
+++ b/config/server_config.json.example
@@ -1,58 +1,83 @@
 {
-  
+
   "development": {
     "port":3000,
-    "definitions": {
-      "practitionerPage": "Basic/iHRISPagePractitioner"
-    },
     "elastic": {
       "server": "http://localhost:9200",
       "username": "username",
       "password": "username",
-      "max_compilations_rate": "10000/1m"
+      "max_compilations_rate": "10000/1m",
+      "version": "7.5"
     },
     "fhir": {
       "server": "localhost",
       "username": "username",
       "password": "password"
     },
+    "emNutt": {
+      "server": "http://localhost:3002",
+      "username": "ihris",
+      "password": "ihris"
+    },
     "kibana": "https://www.elastic.co/products/kibana",
-    "structureDefinition": "http://server.com/fhir"
+    "mhero": "http://mhero.org/fhir/StructureDefinition",
+    "structureDefinition": "http://server.com/fhir",
+    "origins": [
+      "http://localhost:8080"
+    ],
+    "https": {
+      "certificate": "path/to/certificate",
+      "privateKey": "path/to/private/key"
+    }
   },
   "test": {
     "port":3000,
-    "definitions": {
-      "practitionerPage": "Basic/iHRISPagePractitioner"
-    },
     "elastic": {
       "server": "http://localhost:9200",
       "username": "username",
-      "password": "username"
+      "password": "username",
+      "version": "7.5"
     },
     "fhir": {
       "server": "localhost",
       "username": "username",
       "password": "password"
     },
+    "emNutt": {
+      "server": "http://localhost:3002",
+      "username": "ihris",
+      "password": "ihris"
+    },
     "kibana": "https://www.elastic.co/products/kibana",
-    "structureDefinition": "http://server.com/fhir"
+    "mhero": "http://mhero.org/fhir/StructureDefinition",
+    "structureDefinition": "http://server.com/fhir",
+    "origins": [
+      "http://www.testserver.com"
+    ]
   },
   "production": {
     "port":3000,
-    "definitions": {
-      "practitionerPage": "Basic/iHRISPagePractitioner"
-    },
     "elastic": {
       "server": "http://localhost:9200",
       "username": "username",
-      "password": "username"
+      "password": "username",
+      "version": "7.5"
     },
     "fhir": {
       "server": "localhost",
       "username": "username",
       "password": "password"
     },
+    "emNutt": {
+      "server": "http://localhost:3002",
+      "username": "ihris",
+      "password": "ihris"
+    },
     "kibana": "https://www.elastic.co/products/kibana",
-    "structureDefinition": "http://server.com/fhir"
+    "mhero": "http://mhero.org/fhir/StructureDefinition",
+    "structureDefinition": "http://server.com/fhir",
+    "origins": [
+      "http://www.yoursite.com"
+    ]
   }
 }
