--- a/ui/.babelrc
+++ b/ui/.babelrc
@@ -1,10 +1,10 @@
 {
-  "presets": [["env", { "modules": false }]],
+  "presets": [["@babel/preset-env", { "modules": false }]],
   "env": {
     "test": {
       "plugins": ["syntax-dynamic-import"],
       "presets": [
-        ["env", { 
+        ["@babel/preset-env", { 
           "targets": { "node": "current" }
           }
         ]
