--- a/ui/package.json
+++ b/ui/package.json
@@ -10,48 +10,48 @@
   },
   "dependencies": {
     "@babel/core": "^7.9.0",
-    "@babel/helper-regex": "^7.5.5",
+    "@babel/helper-regex": "^7.8.3",
     "@babel/preset-env": "^7.9.5",
-    "@mdi/font": "^4.5.95",
-    "axios": "0.*",
-    "core-js": "^2.6.5",
+    "@mdi/font": "^5.1.45",
+    "axios": "^0.19.2",
+    "core-js": "^3.6.5",
     "datejs": "^1.0.0-rc3",
     "eslint-plugin-prettier": "^3.1.1",
-    "fhir": "4.*",
+    "fhir": "^4.7.3",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
-    "swagger-ui": "^3.25.0",
-    "vue": "2.*",
+    "swagger-ui": "^3.25.1",
+    "vue": "^2.6.11",
     "vue-async-computed": "^3.8.2",
-    "vue-cookies": "^1.5.13",
-    "vue-router": "^3.0.7",
+    "vue-cookies": "^1.7.0",
+    "vue-router": "^3.1.6",
     "vuejs-datepicker": "^1.6.2",
-    "vuetify": "^2.1.6",
+    "vuetify": "^2.2.25",
     "vuetify2-datetime-picker": "^1.0.0-alpha.3",
-    "vuex": "^3.1.1"
+    "vuex": "^3.3.0"
   },
   "devDependencies": {
-    "@babel/polyfill": "^7.0.0",
-    "@mdi/font": "^4.5.95",
-    "@vue/cli-plugin-babel": "^3.10.0",
-    "@vue/cli-plugin-eslint": "^4.0.5",
-    "@vue/cli-plugin-unit-jest": "^3.10.0",
-    "@vue/cli-service": "^4.0.5",
-    "@vue/eslint-config-prettier": "^5.0.0",
-    "@vue/test-utils": "1.0.0-beta.29",
+    "@babel/polyfill": "^7.8.7",
+    "@vue/cli-plugin-babel": "^4.3.1",
+    "@vue/cli-plugin-eslint": "^4.3.1",
+    "@vue/cli-plugin-unit-jest": "^4.3.1",
+    "@vue/cli-service": "^4.3.1",
+    "@vue/eslint-config-prettier": "^6.0.0",
+    "@vue/test-utils": "^1.0.0-beta.33",
+    "acorn": "^7.1.1",
     "babel-core": "^7.0.0-bridge.0",
-    "babel-eslint": "^10.0.2",
-    "babel-jest": "24.*",
+    "babel-eslint": "^10.1.0",
+    "babel-jest": "^25.1.0",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-preset-env": "^1.7.0",
-    "eslint": "6.*",
-    "eslint-plugin-vue": "^5.2.3",
-    "sass": "^1.23.1",
-    "sass-loader": "^7.3.1",
-    "stylus": "0.*",
+    "eslint": "^6.8.0",
+    "eslint-plugin-vue": "^6.2.2",
+    "sass": "^1.26.5",
+    "sass-loader": "^8.0.1",
+    "stylus": "^0.54.7",
     "stylus-loader": "3.*",
-    "vue-cli-plugin-vuetify": "^0.6.1",
-    "vue-template-compiler": "2.*",
+    "vue-cli-plugin-vuetify": "^2.0.5",
+    "vue-template-compiler": "^2.6.11",
     "vuetify-loader": "^1.4.3"
   }
 }
