--- a/ihris-backend/package.json
+++ b/ihris-backend/package.json
@@ -3,15 +3,17 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "test": "jest"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
-    "fhir": "^4.7.7",
     "morgan": "~1.9.1",
-    "nconf": "^0.10.0"
+    "nconf": "^0.10.0",
+    "url": "^0.11.0"
   },
   "devDependencies": {
     "jest": "^26.0.1"
