--- a/ihris-backend/package.json
+++ b/ihris-backend/package.json
@@ -11,8 +11,12 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "express-session": "^1.17.1",
     "morgan": "~1.9.1",
     "nconf": "^0.10.0",
+    "passport": "^0.4.1",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-local": "^1.0.0",
     "url": "^0.11.0"
   },
   "devDependencies": {
