Added in fhirModule module to load signed module data from a FHIR Library (profile IhrisModule).  Create FSH file for iHRIS Modules.  Updated tests.  Still need to add tests for fhirModule and finish module to load from the FHIR server instead of the test code that exists now.  Added initial tool to create and sign a module based on javascript module file.

--- a/ihris-backend/package.json
+++ b/ihris-backend/package.json
@@ -17,6 +17,7 @@
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
+    "require-from-string": "^2.0.2",
     "url": "^0.11.0"
   },
   "devDependencies": {
