--- a/ihris-backend/package.json
+++ b/ihris-backend/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "connect-redis": "^4.0.4",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
@@ -17,6 +18,7 @@
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
+    "redis": "^3.0.2",
     "require-from-string": "^2.0.2",
     "url": "^0.11.0"
   },
