Moved iHRIS template for IG publisher and changed refernece to be relative.  Minor updates to colors.

--- a/fsh/ig-data/ig.ini
+++ b/fsh/ig-data/ig.ini
@@ -10,5 +10,5 @@
 ; * See: https://build.fhir.org/ig/FHIR/ig-guidance/using-templates.html#root                      *
 ; **************************************************************************************************
 ig = input/ImplementationGuide-ihris.json
-template = /Users/nmijumbi/FHIR/iHRIS/fsh/ig-data/ihrisigtemplate
+template = #../ihrisigtemplate
 usage-stats-opt-out = false
