Update axios mock to allow for differing URLs and parameters to have different results when setting up tests.  Added permissions to user module and added loading roles/permissions from FHIR and loading them into the User object.  Updated user tests for new functionality.

--- a/ihris-backend/package.json
+++ b/ihris-backend/package.json
@@ -15,6 +15,7 @@
     "express-session": "^1.17.1",
     "morgan": "~1.9.1",
     "nconf": "^0.10.0",
+    "object-hash": "^2.0.3",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
