--- a/ihris-backend/package.json
+++ b/ihris-backend/package.json
@@ -13,10 +13,12 @@
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "express-session": "^1.17.1",
+    "fhirpath": "^2.1.5",
     "morgan": "~1.9.1",
     "nconf": "^0.10.0",
     "object-hash": "^2.0.3",
     "passport": "^0.4.1",
+    "passport-custom": "^1.1.1",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
     "redis": "^3.0.2",
