--- a/ihris-backend/package.json
+++ b/ihris-backend/package.json
@@ -23,6 +23,7 @@
     "passport-local": "^1.0.0",
     "redis": "^3.0.2",
     "require-from-string": "^2.0.2",
+    "supertest": "^4.0.2",
     "url": "^0.11.0"
   },
   "devDependencies": {
