--- a/ihris-backend/package.json
+++ b/ihris-backend/package.json
@@ -14,6 +14,7 @@
     "express": "~4.16.1",
     "express-session": "^1.17.1",
     "fhirpath": "^2.1.5",
+    "is-empty": "^1.2.0",
     "morgan": "~1.9.1",
     "nconf": "^0.10.0",
     "object-hash": "^2.0.3",
