--- a/ihris-backend/package.json
+++ b/ihris-backend/package.json
@@ -11,10 +11,12 @@
     "connect-redis": "^4.0.4",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dompurify": "^2.0.11",
     "express": "~4.16.1",
     "express-session": "^1.17.1",
     "fhirpath": "^2.1.5",
     "is-empty": "^1.2.0",
+    "marked": "^1.1.0",
     "morgan": "~1.9.1",
     "nconf": "^0.10.0",
     "object-hash": "^2.0.3",
