Adding a page for displaying report based on the GraphDefinition resource

--- a/ihris-backend/config/baseConfig.json
+++ b/ihris-backend/config/baseConfig.json
@@ -9,7 +9,7 @@
   "parameter": [
     {
       "name": "fhir:base",
-      "valueString": "http://localhost:8080/hapi/fhir"
+      "valueString": "http://localhost:8081/scratchpad/fhir"
     },
     {
       "name": "config",
