Fixed typo in shortname configuration in ihris-config Paramters.

--- a/resources/Parameters-ihris-config.json
+++ b/resources/Parameters-ihris-config.json
@@ -211,19 +211,19 @@
           "valueString": "/dashboard"
         },
         {
-          "name": "shortname.Practitioner:format",
+          "name": "shortname:Practitioner:format",
           "valueString": "%s, %s"
         },
         {
-          "name": "shortname.Practitioner:order",
+          "name": "shortname:Practitioner:order",
           "valueString": "family,given"
         },
         {
-          "name": "shortname.Practitioner:paths:family:fhirpath",
+          "name": "shortname:Practitioner:paths:family:fhirpath",
           "valueString": "name.where(use='official').first().family"
         },
         {
-          "name": "shortname.Practitioner:paths:given:fhirpath",
+          "name": "shortname:Practitioner:paths:given:fhirpath",
           "valueString": "name.where(use='official').first().given"
         }
       ]
