Updated endrole module to be a Library and added it to the resources directory with the code in the resources/moduleCode.  Added tests to fhirModules for loading workflow modules.

--- a/resources/Parameters-ihris-config.json
+++ b/resources/Parameters-ihris-config.json
@@ -225,6 +225,14 @@
         {
           "name": "shortname:Practitioner:paths:given:fhirpath",
           "valueString": "name.where(use='official').first().given"
+        },
+        {
+          "name": "workflow:processor:endrole:library",
+          "valueString": "ihris-workflow-endrole"
+        },
+        {
+          "name": "workflow:questionnaire:endrole:url",
+          "valueString": "http://ihris.org/fhir/Questionnaire/ihris-endrole"
         }
       ]
     }
