Added in promotion workflow questionnaire and module.

--- a/resources/Parameters-ihris-config.json
+++ b/resources/Parameters-ihris-config.json
@@ -233,6 +233,14 @@
         {
           "name": "workflow:questionnaire:endrole:url",
           "valueString": "http://ihris.org/fhir/Questionnaire/ihris-endrole"
+        },
+        {
+          "name": "workflow:processor:promotion:library",
+          "valueString": "ihris-workflow-promotion"
+        },
+        {
+          "name": "workflow:questionnaire:promotion:url",
+          "valueString": "http://ihris.org/fhir/Questionnaire/ihris-promotion"
         }
       ]
     }
