--- a/tools/package.json
+++ b/tools/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "axios": "^0.19.2",
     "fhir": "^4.7.8",
-    "nconf": "^0.10.0"
+    "nconf": "^0.10.0",
+    "urijs": "^1.19.2"
   },
   "devDependencies": {},
   "scripts": {
