--- a/resources/Parameters-ihris-config.json
+++ b/resources/Parameters-ihris-config.json
@@ -183,6 +183,14 @@
           "valueString": "/page/mhero"
         },
         {
+          "name": "site:nav:menu:mhero:menu:groups:text",
+          "valueString": "Contact Groups"
+        },
+        {
+          "name": "site:nav:menu:mhero:menu:groups:url",
+          "valueString": "/page/contact-groups"
+        },
+        {
           "name": "site:nav:menu:database:text",
           "valueString": "Database"
         },
