changing mhero to use es based reports

--- a/resources/Parameters-ihris-config.json
+++ b/resources/Parameters-ihris-config.json
@@ -259,6 +259,15 @@
           "valueString": "http://ihris.org/fhir/Questionnaire/ihris-promotion"
         }
       ]
+    },
+    {
+      "name": "sync",
+      "part": [
+        {
+          "name": "escaching",
+          "valueDateTime": "1970-03-09T17:32:44"
+        }
+      ]
     }
   ]
 }
