--- a/ihris-frontend/package.json
+++ b/ihris-frontend/package.json
@@ -14,6 +14,7 @@
     "fhirpath": "^2.2.2",
     "vue": "^2.6.11",
     "vue-cron-editor-buefy": "^0.2.13",
+    "vue-moment": "^4.1.0",
     "vue-router": "^3.2.0",
     "vuetify": "^2.2.11",
     "vuex": "^3.4.0",
