Initial set up of Ethiopian calendar date picker for initial review.  This needs to be enabled by configuration and also added to the date time component.  Also need to make the picker component be based on a module instead of in this repository.

--- a/ihris-frontend/package.json
+++ b/ihris-frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "ethiopic-calendar": "^2.0.0",
     "fhirpath": "^2.2.2",
     "vue": "^2.6.11",
     "vue-cron-editor-buefy": "^0.2.13",
