bug fix for docs

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -22,7 +22,7 @@ theme:
     text: "Roboto"
     code: "Roboto Mono"
   features:
-    - tabs
+    - navigation.tabs
   # - navigation.expand
 
 nav:
