Updated example config and cleaned up example config resource.

--- a/ihris-backend/config/baseConfig.json.example
+++ b/ihris-backend/config/baseConfig.json.example
@@ -90,19 +90,13 @@
         {
           "name": "ihris",
           "valueString": "ihris-config"
-        },
-        {
-          "name": "dashboard",
-          "valueString": "ihris-dashboard"
         }
       ]
     },
     {
       "name": "modules",
-      "part": [{
-        "name": "test-mod",
-        "valueString": "test-module"
-      }]
+      "part": [
+      ]
     },
     {
       "name": "keys",
