first go with ihris-config container

--- a/docker-compose.ihris.yml
+++ b/docker-compose.ihris.yml
@@ -21,7 +21,8 @@ services:
     restart: on-failure
     environment:
       IHRIS_FHIR__BASE: http://fhir:8080/fhir
-      AUTOLOAD_RESOURCE_DIR: ../resources
+      # do not use any longer
+      # AUTOLOAD_RESOURCE_DIR: ../resources
       IHRIS_REDIS__URL: redis://redis
       IHRIS_ELASTICSEARCH__BASE: http://es:9200
       IHRIS_KIBANA__BASE: http://kibana:5601
