--- a/docker-compose.hapi.config copy.yml
+++ b/docker-compose.hapi.config copy.yml
@@ -2,8 +2,8 @@ version: '3'
 
 services:
 
-  upload:
-    container_name: upload
-    image: ihris/upload-definitions:latest
+  ihris-config:
+    container_name: ihris-config
+    image: ihris/ihris-config:latest
     environment:
       IHRIS_FHIR__BASE: http://fhir:8080/fhir
