--- a/ihris-backend/Dockerfile.ihris.config
+++ b/ihris-backend/Dockerfile.ihris.config
@@ -24,4 +24,27 @@ CMD node load.js --server $IHRIS_FHIR__BASE \
     /src/fsh/build/input/examples/*.json \
     /src/fsh/build/input/resources/*.json \
     /src/fsh/build/input/vocabulary/*.json \
-    /src/resources/*.json
+    && node load.js --server $IHRIS_FHIR__BASE \
+    /src/resources/Basic*.json \
+    /src/resources/CodeSystem*.json \
+    /src/resources/DocumentReference*.json \
+    /src/resources/Library*.json \
+    /src/resources/Parameters*.json \
+    /src/resources/Person*.json \
+    /src/resources/SearchParameter*.json \
+    /src/resources/ValueSet*.json \
+    && node load.js --server $IHRIS_FHIR__BASE \ 
+    /src/fsh/build/input/profiles/*.json \
+    /src/fsh/build/input/extensions/*.json \
+    /src/fsh/build/input/examples/*.json \
+    /src/fsh/build/input/resources/*.json \
+    /src/fsh/build/input/vocabulary/*.json \
+    && node load.js --server $IHRIS_FHIR__BASE \
+    /src/resources/Basic*.json \
+    /src/resources/CodeSystem*.json \
+    /src/resources/DocumentReference*.json \
+    /src/resources/Library*.json \
+    /src/resources/Parameters*.json \
+    /src/resources/Person*.json \
+    /src/resources/SearchParameter*.json \
+    /src/resources/ValueSet*.json
