Another bug fix for GitHub action lameness

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -29,7 +29,7 @@ jobs:
         with:
           context: .
           file: ./ihris-backend/Dockerfile
-          platforms: linux/amd64,linux/arm64,linux/386
+          platforms: linux/amd64
           push: true
           tags: |
             ihris/ihris:${{ github.sha }}
